Update CIP-0006 with additional covered lines
- Mark fourier function with frequency_range (line 825) as covered
- Mark relu function edge cases (lines 858-861, 863) as covered
- Continue systematic coverage improvement progress

--- a/cip/cip0006.md
+++ b/cip/cip0006.md
@@ -208,8 +208,8 @@ Comprehensive testing approach:
 - ~~Line 537: LM constructor error handling~~ ✅ **COVERED**
 - ~~Lines 654-655, 659-660: Linear model objective/log_likelihood edge cases~~ ✅ **COVERED**
 - ~~Lines 783-785: radial function single basis branch~~ ✅ **COVERED**
-- Lines 825: Basis function edge cases (fourier functions)
-- Lines 858-861, 863: Basis function edge cases (hyperbolic_tangent function)
+- ~~Line 825: fourier function with frequency_range~~ ✅ **COVERED**
+- ~~Lines 858-861, 863: relu function edge cases~~ ✅ **COVERED**
 - Lines 902-907: Basis function edge cases (relu function)
 - Lines 2295-2298, 2325-2335: LR (Logistic Regression) edge cases
 
